--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                
                <div class="portfolio-items-wrapper">
                  <div class="portfolio-item-wrapper">
-                   <div class="portfolio-img-background" style="background-image: url(images/img-10.png)"></div>
+                   <div class="portfolio-img-background" style="background-image: url('images/img-10.png')"></div>
                      <div class="img-text-wrapper">
                        <div class="logo-wrapper">
                            <!-- <img src="images/img-1.png"> -->
@@ -42,7 +42,7 @@
                    </div>
                  </div>
                  <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image: url(images/img-2.png)"></div>
+                    <div class="portfolio-img-background" style="background-image: url('images/img-2.png')"></div>
                       <div class="img-text-wrapper">
                         <div class="logo-wrapper">
                             <!-- <img src="images/img-1.png"> -->
@@ -53,7 +53,7 @@
                     </div>
                   </div>
                   <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image: url(images/img-3.png)"></div>
+                    <div class="portfolio-img-background" style="background-image: url('images/img-3.png')"></div>
                       <div class="img-text-wrapper">
                         <div class="logo-wrapper">
                             <!-- <img src="images/img-1.png"> -->
@@ -64,7 +64,7 @@
                     </div>
                   </div>
                   <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image: url(images/img-4.png)"></div>
+                    <div class="portfolio-img-background" style="background-image: url('images/img-4.png')"></div>
                       <div class="img-text-wrapper">
                         <div class="logo-wrapper">
                             <!-- <img src="images/img-1.png"> -->
@@ -75,7 +75,7 @@
                     </div>
                   </div>
                   <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image: url(images/img-5.png)"></div>
+                    <div class="portfolio-img-background" style="background-image: url('images/img-5.png')"></div>
                       <div class="img-text-wrapper">
                         <div class="logo-wrapper">
                             <!-- <img src="images/img-1.png"> -->
@@ -86,7 +86,7 @@
                     </div>
                   </div>
                   <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image: url(images/img-6.png)"></div>
+                    <div class="portfolio-img-background" style="background-image: url('images/img-6.png')"></div>
                       <div class="img-text-wrapper">
                         <div class="logo-wrapper">
                             <!-- <img src="images/img-1.png"> -->
@@ -97,7 +97,7 @@
                     </div>
                   </div>
                   <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image: url(images/img-7.png)"></div>
+                    <div class="portfolio-img-background" style="background-image: url('images/img-7.png')"></div>
                       <div class="img-text-wrapper">
                         <div class="logo-wrapper">
                             <!-- <img src="images/img-1.png"> -->
@@ -108,7 +108,7 @@
                     </div>
                   </div>
                   <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image: url(images/img-8.png)"></div>
+                    <div class="portfolio-img-background" style="background-image: url('images/img-8.png')"></div>
                       <div class="img-text-wrapper">
                         <div class="logo-wrapper">
                             <!-- <img src="images/img-1.png"> -->
@@ -119,7 +119,7 @@
                     </div>
                   </div>
                   <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image: url(images/img-9.png)"></div>
+                    <div class="portfolio-img-background" style="background-image: url('images/img-9.png')"></div>
                       <div class="img-text-wrapper">
                         <div class="logo-wrapper">
                             <!-- <img src="images/img-1.png"> -->
