--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     </div>
                   </div>
                   <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image: url('images/img-5.png')"></div>
+                    <div class="portfolio-img-background" style="background-image: url('Images/img-5.png')"></div>
                       <div class="img-text-wrapper">
                         <div class="logo-wrapper">
                             <!-- <img src="images/img-1.png"> -->
